# maity-copiloto

./: .gitignore  Cargo.toml  README.md  STATUS_ETA_INTEGRATION.md
.cargo/: config.toml
.github/workflows/: build.yml  quality-gates.yml
dashboard/: tailwind.config.js
dashboard-web/: index.html  lab.html  server.mjs  test_runner.mjs
dashboard/src/: App.tsx
dashboard/src/components/: ActivityHeatmap.tsx  AnimatedCounter.tsx  Card.tsx  Header.tsx  ProgressRing.tsx  PromptViewer.tsx  ShimmerBadge.tsx  StatsCards.tsx  shimmer.css
dashboard/src/data/: metrics.ts  prompts.ts
docs/: CHAT_WITH_MEETING.md  COACH_FRAMEWORKS.md  DASHBOARD_FEATURE.md  DEV_AUDIO_IMPORT_FEATURE.md  EVALUATION_FEATURE.md  FLOATING_WINDOW.md  PLAN_MAESTRO_MAITY_COPILOTO.md  PLAN_PRUEBAS_50_ITERACIONES.md  architecture.md
frontend/: next.config.js  package.json
frontend/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
frontend/src-tauri/.cargo/: config.toml
frontend/src-tauri/migrations/: 20260416000000_add_bookmarks.sql  20260425000000_add_meeting_evaluations.sql  20260427000000_add_custom_prompts.sql  20260428000000_add_transcripts_index.sql  20260430000000_create_dashboard_tables.sql  20260501190000_create_coach_tips_log.sql
frontend/src-tauri/scenarios/: 01_objecion_precio.json  (+35 more)
llama-helper/: Cargo.toml
llama-helper/src/: main.rs
scripts/: audit_buttons.mjs  build_real_scenarios.py  eval_scenarios.py  generate-update-manifest-github.js  last_eval_report.json  make-portable-zip.ps1  prompt_lab_runner.py  test-update-locally.js
test_data/: tip_ground_truths.json
(+205 files in other folders)
